# catharsis

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: dev-report.yaml
src/catharsis/: __init__.py  arch.py  batched_lora.py  cli.py  data.py  evolve.py  judge.py  log.py  model.py  noise.py  trace.py  vllm_backend.py
tests/: test_batched_lora.py  test_integration.py
traces/run_1775758811/: trace.jsonl
