[project]
name = "catharsis"
version = "0.1.0"
description = "LLM re-alignment toolkit"
readme = "README.md"
authors = [
    { name = "Vladimir Sotnikov", email = "vladimir.s@alphakek.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.10",
    "torchvision",
    "transformers>=5.5.3",
    "peft",
    "datasets>=4.8",
    "openai>=2.24",
    "pydantic>=2.12",
    "tqdm>=4.67",
    "typer>=0.24",
    "structlog>=25.1",
    "pillow>=12.2.0",
    "safetensors>=0.7.0",
    "httpx>=0.28.1",
]

[project.scripts]
catharsis = "catharsis.cli:main"

[build-system]
requires = ["uv_build>=0.9.30,<1.0.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.25",
    "pytest>=9.0",
    "pre-commit>=4.5.1",
    "trl>=1.0.0",
]

#[tool.uv]
#exclude-newer = "7 days"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"
